tests/rosetta/out/Zig/active-object.error
zig build: exit status 1
/tmp/active-object.zig:9:5: error: variable of type 'comptime_int' must be const or comptime
/tmp/active-object.zig:9:5: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
